crates/aimee_repo/src/provider/snapshots/aimee_repo__provider__openai__tests__fetch_models_http_error_status.snap
---
source: crates/aimee_repo/src/provider/openai.rs
expression: "normalize_ports(format!(\"{:#?}\", actual.unwrap_err()))"
---
Error {
    context: "Failed to fetch the models",
    source: Error {
        context: "401 GET http://127.0.0.1:<port>/models",
        source: "{\"error\":{\"code\":401,\"message\":\"Invalid API key\"}}",
    },
}
